--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /ShareTextureYuvWithoutLock/CreateShareTexture/build
 /ShareTextureYuvWithoutLock/UseShareTexture/build
 /ShareTextureRGBAWithoutLock/CreateShareTexture/build
+/ShareTextureRGBAWithoutLock/UseShareTexture/build
