add RenderSphere. 初始化项目。渲染球面纹理

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /ShareTextureYuvWithoutLock/UseShareTexture/build
 /ShareTextureRGBAWithoutLock/CreateShareTexture/build
 /ShareTextureRGBAWithoutLock/UseShareTexture/build
+/RenderShpere/build
