--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /ShareTextureRGBAWithoutLock/CreateShareTexture/build
 /ShareTextureRGBAWithoutLock/UseShareTexture/build
 /RenderShpere/build
+/RectTexture3D/build
