add ShareTextureRGBAFFmpeg. 1. 添加ffmpeg解码mp4文件 2.将解码出来的帧转换成RGBA格式

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /RenderShpere/build
 /RectTexture3D/build
 /ShareTextureYUVFFmpeg/CreateShareTexture/build
+/ShareTextureRGBAFFmpeg/CreateShareTexture/build
