--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /ShareTextureYUVFFmpeg/CreateShareTexture/build
 /ShareTextureRGBAFFmpeg/CreateShareTexture/build
 /ShareTextureYUVFFmpeg/UseShareTexture/build
+/ShareTextureRGBAFFmpeg/UseShareTexture/build
